fixed whacked out jumping animation

--- a/css/animationLibrary.less
+++ b/css/animationLibrary.less
@@ -135,7 +135,6 @@
 		}
 		&.jump{
 			bottom: 180px;
-			-webkit-transform: scale3d(.96,1.01,0);
 			.right-foot {
 				-webkit-transform: rotate3d(0,0,1,30deg);
 				right: -10%;
